<?xml version="1.0"?>

<resources>

    <string name="app_name">TemaSolution</string>

    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="name">Name</string>

    <string name="email_id">Email ID</string>

    <string name="phone_no">Phone No</string>

    <string name="registration_id">Registration ID</string>

    <string name="hospital">Hospital</string>

    <string name="address">Address</string>

    <string name="education">Education</string>

    <string name="registration">Registration</string>

    <string name="password">Password</string>

    <!--newly added-->


    <string name="i_agree_to_the_terms_and_conditions_of_the_website">I agree to the Terms and
        Conditions of the website
    </string>

    <string name="register">REGISTER</string>

    <string name="submit">SUBMIT</string>

    <string name="prescription">PRESCRIPTION</string>

    <string name="add">ADD</string>

    <string name="patient_name">PATIENT NAME</string>

    <string name="mobile_no">MOBILE NO</string>

    <string name="age">AGE</string>

    <string name="weight">WEIGHT</string>

    <string name="next">NEXT</string>


    <string-array name="product_name">

        <item>PRODUCT NAME</item>

    </string-array>


    <string-array name="quantity">

        <item>QUANTITY</item>

    </string-array>


    <string-array name="delivery_date">

        <item>DELIVERY DATE</item>

    </string-array>


    <string-array name="delivery_time">

        <item>DELIVERY TIME</item>

    </string-array>

</resources>