<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:text="@string/registration"
        android:textColor="#000"
        android:textSize="23sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@color/edittext_color"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="7dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:background="@color/edittext_color"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:padding="7dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/phone_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:background="@color/edittext_color"
        android:hint="@string/phone_no"
        android:inputType="phone"
        android:padding="7dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/registration_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:background="@color/edittext_color"
        android:hint="@string/registration_id"
        android:inputType="textEmailAddress"
        android:padding="7dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/hospital"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:background="@color/edittext_color"
        android:hint="@string/hospital"
        android:inputType="text"
        android:padding="7dp"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:background="@color/edittext_color"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:padding="7dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/educaton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:background="@color/edittext_color"
        android:hint="@string/education"
        android:inputType="text"
        android:padding="7dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <CheckBox
        android:id="@+id/registration_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/i_agree_to_the_terms_and_conditions_of_the_website"
        android:textSize="12sp" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginTop="15dp"
        android:background="@color/button_dark"
        android:text="@string/submit"
        android:textColor="@color/white" />
</LinearLayout>